// **********************************************************************
//
// Copyright (c) 2003-2017 ZeroC, Inc. All rights reserved.
//
// This copy of Ice is licensed to you under the terms described in the
// ICE_LICENSE file included in this distribution.
//
// **********************************************************************

//sourceCompatibility = iceSourceCompatibility
//targetCompatibility = iceTargetCompatibility
sourceCompatibility = 1.8
targetCompatibility = 1.8

project.ext.displayName = "Ice"
project.ext.description = "Ice is a comprehensive RPC framework that helps you build distributed applications" +
                          " with minimal effort using familiar object-oriented idioms"

slice {
    java {
        stream {
            files = [file("$sliceDir/Ice/BuiltinSequences.ice")]
        }
        nostream {
            files = fileTree(dir: "$sliceDir", includes:['Ice/*.ice'],
                excludes:['Ice/*F.ice', 'Ice/BuiltinSequences.ice'])
        }
    }
}

apply from: "$rootProject.projectDir/gradle/library.gradle"
